Fix type on travis config.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ deploy:
   bucket_path: "docker-react-poc"
   on:
     branch: main
-  access_key_id: $AWS_ACCCESS_KEY
+  access_key_id: $AWS_ACCESS_KEY
   secret_access_key: "$AWS_SECRET_KEY"
